Theme and fix the scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,48 @@
 body {
     --bs-body-color: #ffffff;
 }
+
+html::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+}
+
+html::-webkit-scrollbar-thumb {
+    background: #434343;
+    border-radius: 16px;
+    box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25), inset -2px -2px 2px rgba(0,0,0,.25);
+}
+
+html::-webkit-scrollbar-track {
+    background: linear-gradient(90deg,#434343,#434343 1px,#111 0,#111);
+}
+
+html > *::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+}
+
+html > *::-webkit-scrollbar-thumb {
+    background: #434343;
+    border-radius: 16px;
+    box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25), inset -2px -2px 2px rgba(0,0,0,.25);
+}
+
+html > *::-webkit-scrollbar-track {
+    background: linear-gradient(90deg,#434343,#434343 1px,#111 0,#111);
+}
+
+.scrollBar::-webkit-scrollbar {
+    width: 5px;
+    height: 6px;
+}
+
+.scrollBar::-webkit-scrollbar-thumb {
+    background: #434343;
+    border-radius: 16px;
+    box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25), inset -2px -2px 2px rgba(0,0,0,.25);
+}
+
+.scrollBar::-webkit-scrollbar-track {
+    background: linear-gradient(90deg,#434343,#434343 1px,#111 0,#111);
+}
